// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`trim fixed length '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": 0,
}
`;

exports[`trim fixed length ' this ' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim fixed length 'this ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": 0,
}
`;

exports[`trim fixed length ' this' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": 5,
}
`;

exports[`trim fixed length '  this' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": 1,
}
`;

exports[`trim fixed length 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": 0,
}
`;

exports[`trim variable length '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": 0,
}
`;

exports[`trim variable length ' this ' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim variable length 'this ' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim variable length ' this' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim variable length '  this' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim variable length 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": 0,
}
`;

exports[`trim string fixed length '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": 0,
}
`;

exports[`trim string fixed length ' this ' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim string fixed length 'this ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": 0,
}
`;

exports[`trim string fixed length ' this' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": 5,
}
`;

exports[`trim string fixed length '  this' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": 1,
}
`;

exports[`trim string fixed length 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": 0,
}
`;
